# GailBot

./: .gitignore  README.md  app.py  changelog.txt  condaenv.ycfqatz3.requirements.txt  environment-dev.yml  environment.yml  gailbot.yaml  google_key.json  pyproject.toml  requirements.txt  res.json  setup.py  test.py  test_hugging_face.py  tests.py
GailBot/: License  README.md  __init__.py  requirements.txt  setup.cfg
GailBot/core/engines/watson/: core.py  recognition_results.py
GailBot/core/io/: __init__.py  general.py
GailBot/core/network/: WS_interface.py
GailBot/core/organizer_service/: source_loader.py
GailBot/core/pipeline/: pipeline.py  stream.py
GailBot/core/pipeline_service/: output_stage.py  pipeline_service.py
GailBot/core/plugin_manager/: plugin_execution_summary.py
GailBot/plugin/plugin_manager/: loader.py  plugin.py  plugin_manager.py
GailBot/plugins/ca_pkg/: config.json  overlaps.py
GailBot/shared_models/: source.py
GailBot/src/gailbot/: __init__.py  core.py  plugins.py
GailBot/src/gailbot/components/controller/: controller.py
GailBot/src/gailbot/components/engines/: engines.py
GailBot/src/gailbot/components/network/: WS_protocol.py
GailBot/src/gailbot/components/organizer_service/: organizer_service.py
GailBot/src/gailbot/components/pipeline/: pipeline.py
GailBot/src/gailbot/components/pipeline_service/: output_stage.py  payload.py  pipeline_service.py
GailBot/src/gailbot/components/plugin_manager/: loader.py  plugin.py
GailBot/src/gailbot/components/shared_models/: settings.py
GailBot/src/gailbot/components/utils/: download.py
GailBot/src/gailbot/plugin_suites/ca_pkg/: pauses.py  turn_construct.py
GailBot/src/gailbot/plugins/ca_pkg/: chat.py  combine_turns.py  config.json  gaps.py
GailBot/src/plugins/ca_pkg/: fto.py
GailBot/tests/: conftest.py  plugins.py  utils.py
GailBot/tests/py_test/: __init__.py
GailBot/tests/py_test/io/: __init__.py  video_io_test.py
GailBot/tests/py_test/network/: network_test.py
GailBot/tests/py_test/organizer_service/: __init__.py
GailBot/tests/py_test/pipeline/: pipeline_test.py
GailBot/tests/py_test/plugin_manager/: loader_test.py  plugin_manager_test.py
GailBot/tests/py_test/transcription/: __init__.py  transcription_test.py
GailBot/tests/pypi/: main.py  vardefs.py
Src/: gb.py  (+3 more)
(+1366 files in other folders)
