[metadata]
name = GailBot
version = 0.0.1a1
author = Muhammad Umair
author_email = muhammad.umair@tufts.edu
description = An Automated Transcription System for Conversation Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mumair01/GailBot-0.3
project_urls =
    Bug Tracker = https://github.com/mumair01/GailBot-0.3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pydub
    sounddevice
    moviepy
    dacite
    networkx
    ibm_watson

[options.packages.find]
where = src

